// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`referrals utilities referralHistoryRows returns formatted rows for a given list of referrals 1`] = `
[
  [
    {
      "html": "<span class="sas-table__cell-header" aria-hidden="true">Referral type</span>
  Approved Premises (CAS1) placement",
    },
    {
      "html": "<span class="sas-table__cell-header" aria-hidden="true">Referred by</span>
  You (Alice Smith)",
    },
    {
      "html": "<span class="sas-table__cell-header" aria-hidden="true">Status and details</span>
  <strong class="govuk-tag govuk-tag--orange">Cancelled</strong>
    <p class="sas-status__date">15 January 2023</p>
    ",
    },
    {
      "html": "
    <div class="govuk-summary-list__actions govuk-!-padding-0">
      <span class="govuk-table-span govuk-body">
        <ul class="govuk-summary-list__actions-list govuk-!-margin-0">
          
            <li class="govuk-summary-list__actions-list-item">
              <a class="govuk-link govuk-link--no-visited-state" href="https://example.com/cas1/123456">View application</a>
            </li>
          
        </ul>
      </span>
    </div>
  ",
    },
  ],
  [
    {
      "html": "<span class="sas-table__cell-header" aria-hidden="true">Referral type</span>
  Duty to refer",
    },
    {
      "html": "<span class="sas-table__cell-header" aria-hidden="true">Referred by</span>
  Joe Bloggs",
    },
    {
      "html": "<span class="sas-table__cell-header" aria-hidden="true">Status and details</span>
  <strong class="govuk-tag govuk-tag--grey">Withdrawn</strong>
    <p class="sas-status__date">Submitted on 20 February 2023</p>
    
      
        <p class="govuk-!-margin-bottom-1">Reason: Replaced by a new referral</p>
      
    ",
    },
    {
      "html": "
    <div class="govuk-summary-list__actions govuk-!-padding-0">
      <span class="govuk-table-span govuk-body">
        <ul class="govuk-summary-list__actions-list govuk-!-margin-0">
          
            <li class="govuk-summary-list__actions-list-item">
              <a class="govuk-link govuk-link--no-visited-state" href="/cases/CRN123/dtr/789012/details">View referral</a>
            </li>
          
        </ul>
      </span>
    </div>
  ",
    },
  ],
  [
    {
      "html": "<span class="sas-table__cell-header" aria-hidden="true">Referral type</span>
  CAS3 referral",
    },
    {
      "html": "<span class="sas-table__cell-header" aria-hidden="true">Referred by</span>
  Matt Jones",
    },
    {
      "html": "<span class="sas-table__cell-header" aria-hidden="true">Status and details</span>
  <strong class="govuk-tag govuk-tag--grey">Archived</strong>
    <p class="sas-status__date">25 March 2023</p>
    
      
        <p class="govuk-!-margin-bottom-1">No bookings</p>
      
    ",
    },
    {
      "html": "",
    },
  ],
  [
    {
      "html": "<span class="sas-table__cell-header" aria-hidden="true">Referral type</span>
  Approved Premises (CAS1) placement request",
    },
    {
      "html": "<span class="sas-table__cell-header" aria-hidden="true">Referred by</span>
  You (Alice Smith)",
    },
    {
      "html": "<span class="sas-table__cell-header" aria-hidden="true">Status and details</span>
  <strong class="govuk-tag govuk-tag--grey">Request withdrawn</strong>
    <p class="sas-status__date">30 April 2023</p>
    
      
        <p class="govuk-!-margin-bottom-1">Reason: Their circumstances changed</p>
      
    ",
    },
    {
      "html": "
    <div class="govuk-summary-list__actions govuk-!-padding-0">
      <span class="govuk-table-span govuk-body">
        <ul class="govuk-summary-list__actions-list govuk-!-margin-0">
          
            <li class="govuk-summary-list__actions-list-item">
              <a class="govuk-link govuk-link--no-visited-state" href="https://example.com/cas1/901234">View application</a>
            </li>
          
        </ul>
      </span>
    </div>
  ",
    },
  ],
]
`;

exports[`referrals utilities referralHistoryTable macro renders a message and no table when there are no referrals 1`] = `
"<div class="govuk-summary-card">
    <div class="govuk-summary-card__title-wrapper">
      <h2 class="govuk-summary-card__title">Referral history</h2>
    </div>
    <div class="govuk-summary-card__content">
      
        
          <p class="govuk-body">No previous referrals</p>
        
      
    </div>
  </div>"
`;

exports[`referrals utilities referralHistoryTable macro renders a message when there is an API error 1`] = `
"<div class="govuk-summary-card">
    <div class="govuk-summary-card__title-wrapper">
      <h2 class="govuk-summary-card__title">Referral history</h2>
    </div>
    <div class="govuk-summary-card__content">
      
        <p class="moj-inset-api-error">This information is currently unavailable. Try again later.</p>
      
    </div>
  </div>"
`;

exports[`referrals utilities referralHistoryTable macro renders the referral history table for a given list of referrals 1`] = `
"<div class="govuk-summary-card">
    <div class="govuk-summary-card__title-wrapper">
      <h2 class="govuk-summary-card__title">Referral history</h2>
    </div>
    <div class="govuk-summary-card__content">
      
        
          <div class="govuk-summary-list">
            <table class="govuk-table sas-table">


  <thead class="govuk-table__head">
    <tr class="govuk-table__row">
    
      <th scope="col" class="govuk-table__header">Referral type</th>
    
      <th scope="col" class="govuk-table__header">Referred by</th>
    
      <th scope="col" class="govuk-table__header">Status and details</th>
    
      <th scope="col" class="govuk-table__header"><span class="govuk-visually-hidden">Actions</span></th>
    
    </tr>
  </thead>

  <tbody class="govuk-table__body">

  
    <tr class="govuk-table__row">
    
      
      
      <th scope="row" class="govuk-table__header"><span class="sas-table__cell-header" aria-hidden="true">Referral type</span>
  Approved Premises (CAS1) placement</th>
      
    
      
      
      <td class="govuk-table__cell"><span class="sas-table__cell-header" aria-hidden="true">Referred by</span>
  You (Alice Smith)</td>
      
    
      
      
      <td class="govuk-table__cell"><span class="sas-table__cell-header" aria-hidden="true">Status and details</span>
  <strong class="govuk-tag govuk-tag--orange">Cancelled</strong>
    <p class="sas-status__date">15 January 2023</p>
    </td>
      
    
      
      
      <td class="govuk-table__cell">
    <div class="govuk-summary-list__actions govuk-!-padding-0">
      <span class="govuk-table-span govuk-body">
        <ul class="govuk-summary-list__actions-list govuk-!-margin-0">
          
            <li class="govuk-summary-list__actions-list-item">
              <a class="govuk-link govuk-link--no-visited-state" href="https://example.com/cas1/123456">View application</a>
            </li>
          
        </ul>
      </span>
    </div>
  </td>
      
    
    </tr>
  

  
    <tr class="govuk-table__row">
    
      
      
      <th scope="row" class="govuk-table__header"><span class="sas-table__cell-header" aria-hidden="true">Referral type</span>
  Duty to refer</th>
      
    
      
      
      <td class="govuk-table__cell"><span class="sas-table__cell-header" aria-hidden="true">Referred by</span>
  Joe Bloggs</td>
      
    
      
      
      <td class="govuk-table__cell"><span class="sas-table__cell-header" aria-hidden="true">Status and details</span>
  <strong class="govuk-tag govuk-tag--grey">Withdrawn</strong>
    <p class="sas-status__date">Submitted on 20 February 2023</p>
    
      
        <p class="govuk-!-margin-bottom-1">Reason: Replaced by a new referral</p>
      
    </td>
      
    
      
      
      <td class="govuk-table__cell">
    <div class="govuk-summary-list__actions govuk-!-padding-0">
      <span class="govuk-table-span govuk-body">
        <ul class="govuk-summary-list__actions-list govuk-!-margin-0">
          
            <li class="govuk-summary-list__actions-list-item">
              <a class="govuk-link govuk-link--no-visited-state" href="/cases/CRN123/dtr/789012/details">View referral</a>
            </li>
          
        </ul>
      </span>
    </div>
  </td>
      
    
    </tr>
  

  
    <tr class="govuk-table__row">
    
      
      
      <th scope="row" class="govuk-table__header"><span class="sas-table__cell-header" aria-hidden="true">Referral type</span>
  CAS3 referral</th>
      
    
      
      
      <td class="govuk-table__cell"><span class="sas-table__cell-header" aria-hidden="true">Referred by</span>
  Matt Jones</td>
      
    
      
      
      <td class="govuk-table__cell"><span class="sas-table__cell-header" aria-hidden="true">Status and details</span>
  <strong class="govuk-tag govuk-tag--grey">Archived</strong>
    <p class="sas-status__date">25 March 2023</p>
    
      
        <p class="govuk-!-margin-bottom-1">No bookings</p>
      
    </td>
      
    
      
      
      <td class="govuk-table__cell"></td>
      
    
    </tr>
  

  
    <tr class="govuk-table__row">
    
      
      
      <th scope="row" class="govuk-table__header"><span class="sas-table__cell-header" aria-hidden="true">Referral type</span>
  Approved Premises (CAS1) placement request</th>
      
    
      
      
      <td class="govuk-table__cell"><span class="sas-table__cell-header" aria-hidden="true">Referred by</span>
  You (Alice Smith)</td>
      
    
      
      
      <td class="govuk-table__cell"><span class="sas-table__cell-header" aria-hidden="true">Status and details</span>
  <strong class="govuk-tag govuk-tag--grey">Request withdrawn</strong>
    <p class="sas-status__date">30 April 2023</p>
    
      
        <p class="govuk-!-margin-bottom-1">Reason: Their circumstances changed</p>
      
    </td>
      
    
      
      
      <td class="govuk-table__cell">
    <div class="govuk-summary-list__actions govuk-!-padding-0">
      <span class="govuk-table-span govuk-body">
        <ul class="govuk-summary-list__actions-list govuk-!-margin-0">
          
            <li class="govuk-summary-list__actions-list-item">
              <a class="govuk-link govuk-link--no-visited-state" href="https://example.com/cas1/901234">View application</a>
            </li>
          
        </ul>
      </span>
    </div>
  </td>
      
    
    </tr>
  

  </tbody>
</table>

          </div>
        
      
    </div>
  </div>"
`;
